Fixed uneven album link sizes in music route

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -160,7 +160,7 @@ form[action$="destroy"] button {
   color: rgb(250, 250, 250); /*text color, changed from inherit*/
   text-decoration: none;
   font-size: xx-large;
-  font-family:'Courier New', Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 #navbar nav a:hover {
@@ -216,7 +216,7 @@ form[action$="destroy"] button {
   justify-content: space-between;
   overflow: hidden;
 
-  white-space: pre;
+  /* white-space: pre; */
   padding: 0.5rem;
   border-radius: 8px;
   color: inherit;
@@ -226,10 +226,26 @@ form[action$="destroy"] button {
   font-family: 'Courier New', Courier, monospace;
   font-weight: bolder;
   background-color: rgb(175, 175, 170);
+  min-width: 550px;
+  max-width: 550px;
 }
 
 #album-links h1 {
   visibility: hidden;
+}
+
+.album-link-h2 {
+  font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  margin-left: 301px;
+  min-width: 15.7%;
+  max-width: 15.7%;
+  min-height: 40%;
+  /* border: solid green; */
+  font-size: 35px;
 }
 
 /************************************************** Album pages **************************************************/
